--- a/app/views/prototypes/peter/complete-john-five.html
+++ b/app/views/prototypes/peter/complete-john-five.html
@@ -72,7 +72,7 @@
             
               <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                 <a href="role" class="govuk-link govuk-link--no-visited-state">
-                  Teaching</a></h3>
+                  Job role</a></h3>
                  <!--<p>
                     18 August 1992<br>
                   Male<br>
