--- a/app/views/prototypes/peter/list-staff-john-end.html
+++ b/app/views/prototypes/peter/list-staff-john-end.html
@@ -39,11 +39,8 @@
 
       <thead class="govuk-table__head">
       <tr class="govuk-table__row">
-    
-      <th class="govuk-table__header" scope="col"></th>
-
-      <th class="govuk-table__header" scope="col"></th>
-      <th class="govuk-table__header" scope="col"></th>
+      <th class="govuk-table__row" scope="col"></th>
+      <th class="govuk-table__cell--numeric"></th>
     </tr>
 </thead>
 
@@ -54,58 +51,75 @@
     
     <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="complete-john-five">John Adams</a>
         </td>
-    <td class="govuk-table__cell" scope="row"> </td>
    <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+    Delete<span class="govuk-table__cell--numeric"> </span>
+  </a></td>
   </tr>
 
 
   <tr class="govuk-table__row">
     
     <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Julie Anne Angelo</a></td>
-    <td class="govuk-table__cell" scope="row"> </td>
+    
    <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
-  </tr>
+   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+    Delete<span class="govuk-table__cell--numeric"></span>
+  </a></td></tr>
 
   <tr class="govuk-table__row">
     
     <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Sharon Bansal</a></td>
-    <td class="govuk-table__cell" scope="row"> </td>
+   
    <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
-  </tr>
+   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+    Delete<span class="govuk-table__cell--numeric"> </span>
+  </a></td></tr>
 
   <tr class="govuk-table__row">
     
     <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Jonathan Bridger</a></td>
-    <td class="govuk-table__cell" scope="row"> </td>
+    
    <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
-  </tr>
+   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+    Delete<span class="govuk-table__cell--numeric"></span>
+  </a></td></tr>
 
   <tr class="govuk-table__row">
     
     <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Henry Curtis</a></td>
-    <td class="govuk-table__cell" scope="row"> </td>
+    
    <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
-  </tr>
+   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+    Delete<span class="govuk-table__cell--numeric"> </span>
+  </a></td></tr>
 
   <tr class="govuk-table__row">
     
     <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">John Dory</a></td>
-    <td class="govuk-table__cell" scope="row"> </td>
+    
    <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
-  </tr>
+   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+    Delete<span class="govuk-table__cell--numeric"> </span>
+  </a></td></tr>
 
   <tr class="govuk-table__row">
     
     <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Andrew McPherson</a></td>
-    <td class="govuk-table__cell" scope="row"> </td>
+    
    <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
-  </tr>
+   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+    Delete<span class="govuk-table__cell--numeric"></span>
+  </a></td></tr>
   
 
 
 </tbody>
 </table> 
  <p class="govuk-table__cell--numeric"><a class="#" href="add-two">Add a member of staff</a> </p><br>
+
+
+ 
 
         
 
