--- a/app/views/prototypes/peter/list-staff-john-end.html
+++ b/app/views/prototypes/peter/list-staff-john-end.html
@@ -30,11 +30,16 @@
 
   
      <h1 class="govuk-heading-xl">
-  Your staff list
+  Staff list
 </h1>
   
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
+
+
+        <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+          Add a member of staff
+        </button>
 <table class="govuk-table">
 
       <thead class="govuk-table__head">
@@ -51,7 +56,7 @@
     
     <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="complete-john-five">John Adams</a>
         </td>
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
    <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
     Delete<span class="govuk-table__cell--numeric"> </span>
   </a></td>
@@ -62,7 +67,7 @@
     
     <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Julie Anne Angelo</a></td>
     
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
    <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
     Delete<span class="govuk-table__cell--numeric"></span>
   </a></td></tr>
@@ -71,7 +76,7 @@
     
     <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Sharon Bansal</a></td>
    
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
    <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
     Delete<span class="govuk-table__cell--numeric"> </span>
   </a></td></tr>
@@ -80,7 +85,7 @@
     
     <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Jonathan Bridger</a></td>
     
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
    <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
     Delete<span class="govuk-table__cell--numeric"></span>
   </a></td></tr>
@@ -89,7 +94,7 @@
     
     <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Henry Curtis</a></td>
     
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
    <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
     Delete<span class="govuk-table__cell--numeric"> </span>
   </a></td></tr>
@@ -98,7 +103,7 @@
     
     <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">John Dory</a></td>
     
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
    <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
     Delete<span class="govuk-table__cell--numeric"> </span>
   </a></td></tr>
@@ -107,7 +112,7 @@
     
     <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Andrew McPherson</a></td>
     
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
    <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
     Delete<span class="govuk-table__cell--numeric"></span>
   </a></td></tr>
@@ -115,8 +120,92 @@
 
 
 </tbody>
-</table> 
- <p class="govuk-table__cell--numeric"><a class="#" href="add-two">Add a member of staff</a> </p><br>
+</table> <br>
+
+<table class="govuk-table">
+
+  <thead class="govuk-table__head">
+  <tr class="govuk-table__row">
+  <th class="govuk-table__row" scope="col"></th>
+  <th class="govuk-table__cell--numeric"></th>
+</tr>
+</thead>
+
+
+
+<tbody class="govuk-table__body">
+<tr class="govuk-table__row">
+
+<td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="complete-john-five">John Adams</a>
+    </td>
+<td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+<td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+Delete<span class="govuk-table__cell--numeric"> </span>
+</a></td>
+</tr>
+
+
+<tr class="govuk-table__row">
+
+<td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Julie Anne Angelo</a></td>
+
+<td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+<td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+Delete<span class="govuk-table__cell--numeric"></span>
+</a></td></tr>
+
+<tr class="govuk-table__row">
+
+<td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Sharon Bansal</a></td>
+
+<td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+<td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+Delete<span class="govuk-table__cell--numeric"> </span>
+</a></td></tr>
+
+<tr class="govuk-table__row">
+
+<td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Jonathan Bridger</a></td>
+
+<td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+<td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+Delete<span class="govuk-table__cell--numeric"></span>
+</a></td></tr>
+
+<tr class="govuk-table__row">
+
+<td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Henry Curtis</a></td>
+
+<td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+<td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+Delete<span class="govuk-table__cell--numeric"> </span>
+</a></td></tr>
+
+<tr class="govuk-table__row">
+
+<td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">John Dory</a></td>
+
+<td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+<td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+Delete<span class="govuk-table__cell--numeric"> </span>
+</a></td></tr>
+
+<tr class="govuk-table__row">
+
+<td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Andrew McPherson</a></td>
+
+<td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+<td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+Delete<span class="govuk-table__cell--numeric"></span>
+</a></td></tr>
+
+
+
+</tbody>
+</table> <br>
+
+
+ 
 
 
  
