--- a/app/views/prototypes/peter/list-staff-nil.html
+++ b/app/views/prototypes/peter/list-staff-nil.html
@@ -32,7 +32,7 @@
 
   
      <h1 class="govuk-heading-xl">
-  Your staff list
+  Staff list
 </h1>
   
     <div class="govuk-grid-row">
@@ -55,7 +55,7 @@
 <tbody class="govuk-table__body">
   <tr class="govuk-table__row">
     
-    <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="complete-john">John Vincent Adams</a>
+    <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="complete-john">John Adams</a>
         </td>
     <td class="govuk-table__cell" scope="row"> </td>
    <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
@@ -73,16 +73,9 @@
 
 </tbody>
 </table> 
- <p class="govuk-table__cell--numeric"><a class="#" href="add-two">Add a member of staff</a> </p><br>
+ 
 
         
-
-          <input type="hidden" name="answers-checked" value="true">
-
-          <a href="#" class="govuk-button show-continue" style="display: inline;">
-      Save
-    </a>
-
         
       </div>
     </div>
