--- a/app/views/prototypes/peter/staff-zero.html
+++ b/app/views/prototypes/peter/staff-zero.html
@@ -38,7 +38,13 @@
   Your staff list
 </h1>
 
-<p>Continue to add staff and complete the sections for each member.</p>
+
+
+          <input type="hidden" name="answers-checked" value="true">
+
+          <a href="add-two" class="govuk-button show-continue" style="display: inline;">
+    Add a member of staff
+    </a><br><br>
 
 
        <table class="govuk-table">
@@ -67,7 +73,7 @@
     </h3>
         </td>
     <td class="govuk-table__cell" scope="row"> </td>
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Started</strong></td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed"></strong></td>
   </tr>
   
   
@@ -75,13 +81,13 @@
 
 </tbody>
 </table> 
- <p class="govuk-table__cell--numeric"><a class="#" href="add-two">Add a member of staff</a> </p><br>
+ <!--<p class="govuk-table__cell--numeric"><a class="#" href="add-two">Add a member of staff</a> </p><br>
 
           <input type="hidden" name="answers-checked" value="true">
 
           <a href="#" class="govuk-button show-continue" style="display: inline;">
     Save
-    </a>
+    </a>-->
 
         </form>
 
