--- a/app/views/prototypes/peter/list-staff-john.html
+++ b/app/views/prototypes/peter/list-staff-john.html
@@ -38,6 +38,12 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
+        <a href="add-two" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          Add a member of staff
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+          </svg></a>
+
       
         
       
@@ -64,6 +70,8 @@
    <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
   </tr>
 
+  
+
 
   <tr class="govuk-table__row">
     
@@ -75,8 +83,10 @@
 
 
 </tbody>
-</table> 
- <p class="govuk-table__cell--numeric"><a class="#" href="add-two">Add a member of staff</a> </p><br>
+</table><br>
+
+
+ 
 
         
 
