--- a/app/views/prototypes/peter/list-staff-john-end.html
+++ b/app/views/prototypes/peter/list-staff-john-end.html
@@ -54,68 +54,126 @@
 <tbody class="govuk-table__body">
   <tr class="govuk-table__row">
     
-    <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="complete-john-five">John Adams</a>
+    <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+      <a href="#" class="govuk-link govuk-link--no-visited-state">
+        John Adams
+      </a>
+    </h3>
         </td>
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
-   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-    Delete<span class="govuk-table__cell--numeric"> </span>
-  </a></td>
+        <td class="govuk-table__cell"><strong class="govuk-tag app-tag--grey govuk-!-margin-bottom-1 govuk-!-font-size-14">
+          Incomplete
+        </strong></td>
+         <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+          Delete<span class="govuk-table__cell--numeric"></span>
+        </a></td></tr>
   </tr>
 
 
   <tr class="govuk-table__row">
     
-    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Julie Anne Angelo</a></td>
-    
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
-   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-    Delete<span class="govuk-table__cell--numeric"></span>
-  </a></td></tr>
+    <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+      <a href="#" class="govuk-link govuk-link--no-visited-state">
+        Julie Ann Angelo
+      </a>
+    </h3>
+        </td>
+        <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
+          Incomplete
+        </strong></td>
+         <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+          Delete<span class="govuk-table__cell--numeric"></span>
+        </a></td></tr>
+  </tr>
 
   <tr class="govuk-table__row">
     
-    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Sharon Bansal</a></td>
-   
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
-   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-    Delete<span class="govuk-table__cell--numeric"> </span>
-  </a></td></tr>
+    <tr class="govuk-table__row">
+    
+      <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+        <a href="#" class="govuk-link govuk-link--no-visited-state">
+          Sharon Bansal
+        </a>
+      </h3>
+          </td>
+          <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
+            Incomplete
+          </strong></td>
+           <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+            Delete<span class="govuk-table__cell--numeric"></span>
+          </a></td></tr>
+    </tr>
 
   <tr class="govuk-table__row">
     
-    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Jonathan Bridger</a></td>
+    <tr class="govuk-table__row">
     
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
-   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-    Delete<span class="govuk-table__cell--numeric"></span>
-  </a></td></tr>
+      <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+        <a href="#" class="govuk-link govuk-link--no-visited-state">
+          Jonathan Bridger
+        </a>
+      </h3>
+          </td>
+          <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
+            Incomplete
+          </strong></td>
+           <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+            Delete<span class="govuk-table__cell--numeric"></span>
+          </a></td></tr>
+    </tr>
 
   <tr class="govuk-table__row">
     
-    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Henry Curtis</a></td>
+    <tr class="govuk-table__row">
     
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
-   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-    Delete<span class="govuk-table__cell--numeric"> </span>
-  </a></td></tr>
+      <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+        <a href="#" class="govuk-link govuk-link--no-visited-state">
+          Henry Decorcey
+        </a>
+      </h3>
+          </td>
+          <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
+            Incomplete
+          </strong></td>
+           <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+            Delete<span class="govuk-table__cell--numeric"></span>
+          </a></td></tr>
+    </tr>
 
   <tr class="govuk-table__row">
     
-    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">John Dory</a></td>
+    <tr class="govuk-table__row">
     
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
-   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-    Delete<span class="govuk-table__cell--numeric"> </span>
-  </a></td></tr>
+      <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+        <a href="#" class="govuk-link govuk-link--no-visited-state">
+          John Dory
+        </a>
+      </h3>
+          </td>
+          <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
+            Incomplete
+          </strong></td>
+           <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+            Delete<span class="govuk-table__cell--numeric"></span>
+          </a></td></tr>
+    </tr>
 
   <tr class="govuk-table__row">
     
-    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Andrew McPherson</a></td>
+    <tr class="govuk-table__row">
     
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
-   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-    Delete<span class="govuk-table__cell--numeric"></span>
-  </a></td></tr>
+      <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+        <a href="#" class="govuk-link govuk-link--no-visited-state">
+          Andrew McPherson
+        </a>
+      </h3>
+          </td>
+          <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
+            Incomplete
+          </strong></td>
+           <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+            Delete<span class="govuk-table__cell--numeric"></span>
+          </a></td></tr>
+    </tr></tr>
   
 
 
@@ -136,68 +194,132 @@
 <tbody class="govuk-table__body">
 <tr class="govuk-table__row">
 
-<td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="complete-john-five">John Adams</a>
-    </td>
-<td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
-<td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-Delete<span class="govuk-table__cell--numeric"> </span>
-</a></td>
+  <tr class="govuk-table__row">
+    
+    <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+      <a href="#" class="govuk-link govuk-link--no-visited-state">
+        Armed Bharat
+      </a>
+    </h3>
+        </td>
+        <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
+          Complete
+        </strong></td>
+         <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+          Delete<span class="govuk-table__cell--numeric"></span>
+        </a></td></tr>
+  </tr>
 </tr>
 
 
-<tr class="govuk-table__row">
 
-<td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Julie Anne Angelo</a></td>
 
-<td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
-<td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-Delete<span class="govuk-table__cell--numeric"></span>
-</a></td></tr>
+
 
 <tr class="govuk-table__row">
-
-<td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Sharon Bansal</a></td>
-
-<td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
-<td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-Delete<span class="govuk-table__cell--numeric"> </span>
-</a></td></tr>
-
+    
+  <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+    <a href="#" class="govuk-link govuk-link--no-visited-state">
+      Amy Cozan
+    </a>
+  </h3>
+      </td>
+      <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
+        Complete
+      </strong></td>
+       <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+        Delete<span class="govuk-table__cell--numeric"></span>
+      </a></td></tr>
+</tr>
 <tr class="govuk-table__row">
 
-<td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Jonathan Bridger</a></td>
-
-<td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
-<td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-Delete<span class="govuk-table__cell--numeric"></span>
-</a></td></tr>
-
-<tr class="govuk-table__row">
-
-<td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Henry Curtis</a></td>
-
-<td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
-<td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-Delete<span class="govuk-table__cell--numeric"> </span>
-</a></td></tr>
-
-<tr class="govuk-table__row">
-
-<td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">John Dory</a></td>
-
-<td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
-<td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-Delete<span class="govuk-table__cell--numeric"> </span>
-</a></td></tr>
+  <tr class="govuk-table__row">
+    
+    <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+      <a href="#" class="govuk-link govuk-link--no-visited-state">
+        Frederick Epstein
+      </a>
+    </h3>
+        </td>
+        <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
+          Complete
+        </strong></td>
+         <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+          Delete<span class="govuk-table__cell--numeric"></span>
+        </a></td></tr>
+  </tr>
 
 <tr class="govuk-table__row">
 
-<td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Andrew McPherson</a></td>
+  <tr class="govuk-table__row">
+    
+    <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+      <a href="#" class="govuk-link govuk-link--no-visited-state">
+        Joel Gowon
+      </a>
+    </h3>
+        </td>
+        <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
+          Complete
+        </strong></td>
+         <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+          Delete<span class="govuk-table__cell--numeric"></span>
+        </a></td></tr>
+  </tr></tr>
 
-<td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
-<td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-Delete<span class="govuk-table__cell--numeric"></span>
-</a></td></tr>
+<tr class="govuk-table__row">
+
+  <tr class="govuk-table__row">
+    
+    <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+      <a href="#" class="govuk-link govuk-link--no-visited-state">
+        Thomas Moore
+      </a>
+    </h3>
+        </td>
+        <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
+          Complete
+        </strong></td>
+         <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+          Delete<span class="govuk-table__cell--numeric"></span>
+        </a></td></tr>
+  </tr></tr>
+
+<tr class="govuk-table__row">
+
+  <tr class="govuk-table__row">
+    
+    <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+      <a href="#" class="govuk-link govuk-link--no-visited-state">
+        Mia Tam
+      </a>
+    </h3>
+        </td>
+        <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
+          Complete
+        </strong></td>
+         <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+          Delete<span class="govuk-table__cell--numeric"></span>
+        </a></td></tr>
+  </tr></tr>
+
+<tr class="govuk-table__row">
+
+  <tr class="govuk-table__row">
+    
+    <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+      <a href="#" class="govuk-link govuk-link--no-visited-state">
+        Vincent Jan Patlong
+      </a>
+    </h3>
+        </td>
+        <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
+        Complete
+        </strong></td>
+         <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+          Delete<span class="govuk-table__cell--numeric"></span>
+        </a></td></tr>
+  </tr></tr>
 
 
 
