--- a/app/views/prototypes/peter/staff-zero.html
+++ b/app/views/prototypes/peter/staff-zero.html
@@ -40,12 +40,9 @@
 
 
 
-          <input type="hidden" name="answers-checked" value="true">
-
-          <a href="add-two" class="govuk-button show-continue" style="display: inline;">
-    Add a member of staff
-    </a><br><br>
-
+<button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  Add a member of staff
+</button><br>
 
        <table class="govuk-table">
 
