--- a/app/views/prototypes/peter/complete-john.html
+++ b/app/views/prototypes/peter/complete-john.html
@@ -50,12 +50,12 @@
                 <a href="answers-staff" class="govuk-link govuk-link--no-visited-state">
                   Personal
                 </a></h3>
-                <!--<p>
+                <p>
                   Date of Birth: 18 August 1992<br>
                 Sex: Male<br>
                 Ethnicity: White<br>
                 Disability: No<BR>
-              Nationality: English</p>-->
+              Nationality: English</p>
             </dt>
             
             <dd class="govuk-summary-list__actions">
