--- a/app/views/prototypes/peter/complete-john-five.html
+++ b/app/views/prototypes/peter/complete-john-five.html
@@ -55,12 +55,12 @@
               <a href="answers-staff" class="govuk-link govuk-link--no-visited-state">
                 Personal
               </a></h3>
-              <!--<p>
+              <p>
                 Date of Birth: 18 August 1992<br>
               Sex: Male<br>
               Ethnicity: White<br>
               Disability: No<BR>
-            Nationality: English</p>-->
+            Nationality: English</p>
           </dt>
           
           <dd class="govuk-summary-list__actions">
@@ -73,11 +73,9 @@
               <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                 <a href="role" class="govuk-link govuk-link--no-visited-state">
                   Job role</a></h3>
-                 <!--<p>
-                    18 August 1992<br>
-                  Male<br>
-                  White<br>
-                English</p>-->
+                 <p>
+                    Teacher<br>
+                  
           </dt>
          
           <dd class="govuk-summary-list__actions">
@@ -89,11 +87,9 @@
             <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
               <a href="what-contract" class="govuk-link govuk-link--no-visited-state">
                 Contract</a></h3>
-                <!--<p>
-                  18 August 1992<br>
-                Male<br>
-                White<br>
-              English</p>-->
+                <p>
+                  Permanent<br>
+                
           </dt>
           
           <dd class="govuk-summary-list__actions">
