--- a/app/views/prototypes/peter/list-staff-nil.html
+++ b/app/views/prototypes/peter/list-staff-nil.html
@@ -34,6 +34,10 @@
      <h1 class="govuk-heading-xl">
   Staff list
 </h1>
+
+<button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  Add a member of staff
+</button><br>
   
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
