--- a/app/views/prototypes/peter/list-staff-john.html
+++ b/app/views/prototypes/peter/list-staff-john.html
@@ -32,19 +32,18 @@
 
   
      <h1 class="govuk-heading-xl">
-  Your staff list
+  Staff list
 </h1>
   
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-        <a href="add-two" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
-          Add a member of staff
-          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
-            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
-          </svg></a>
+        <a href="add-two" class="govuk-button show-continue" style="display: inline;">
+  Add a member of staff
+</a><br><br><br>
 
-      
+<h2 class="govuk-heading-m app-application-cards__heading">Incomplete staff members</h2>
+
         
       
        <table class="govuk-table">
@@ -67,7 +66,7 @@
     <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="complete-john">John Adams</a>
         </td>
     <td class="govuk-table__cell" scope="row"> </td>
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed"></strong></td>
   </tr>
 
   
@@ -77,13 +76,50 @@
     
     <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Julie Anne Angelo</a></td>
     <td class="govuk-table__cell" scope="row"> </td>
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed"></strong></td>
   </tr>
   
 
 
 </tbody>
 </table><br>
+
+<h2 class="govuk-heading-m app-application-cards__heading">Complete staff members</h2>
+
+<table class="govuk-table">
+
+  <thead class="govuk-table__head">
+  <tr class="govuk-table__row">
+
+  <th class="govuk-table__header" scope="col"></th>
+
+  <th class="govuk-table__header" scope="col"></th>
+  <th class="govuk-table__header" scope="col"></th>
+</tr>
+</thead>
+
+
+
+<tbody class="govuk-table__body">
+<tr class="govuk-table__row">
+
+
+
+<td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-m govuk-!-margin-bottom-1">
+  <a href="complete-john" class="govuk-link govuk-link--no-visited-state">
+    Julie Jones
+  </a>
+</h3>
+    </td>
+<td class="govuk-table__cell" scope="row"> </td>
+<td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed"></strong></td>
+</tr>
+
+
+
+
+</tbody>
+</table>
 
 
  
