--- a/app/views/prototypes/peter/staff-zero.html
+++ b/app/views/prototypes/peter/staff-zero.html
@@ -86,7 +86,7 @@
 
 
 </tbody>
-</table>
+</table><br><br>
 
 <h2 class="govuk-heading-m app-application-cards__heading">Complete staff members</h2>
 
