--- a/app/views/prototypes/peter/staff-zero.html
+++ b/app/views/prototypes/peter/staff-zero.html
@@ -41,9 +41,9 @@
 
 
 
-<a href="add-two" class="govuk-button show-continue" style="display: inline;">
-  Add a member of staff
-</a><br><br><br>
+<a href="add-two"  class="govuk-button govuk-button--secondary">Add a member of staff </a>
+<br> <br>
+
 <!--<button class="govuk-button govuk-button--secondary" data-module="govuk-button" href="add-two">
   Add a member of staff
 </button>-->
