--- a/app/views/prototypes/peter/list-staff-john.html
+++ b/app/views/prototypes/peter/list-staff-john.html
@@ -38,9 +38,8 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-        <a href="add-two" class="govuk-button show-continue" style="display: inline;">
-  Add a member of staff
-</a><br><br><br>
+        <a href="add-two"  class="govuk-button govuk-button--secondary">Add a member of staff </a>
+<br> <br>
 
 <h2 class="govuk-heading-m app-application-cards__heading">Incomplete staff members</h2>
 
