--- a/app/views/prototypes/peter/list-staff-nil.html
+++ b/app/views/prototypes/peter/list-staff-nil.html
@@ -34,13 +34,12 @@
      <h1 class="govuk-heading-xl">
   Staff list
 </h1>
-
-<button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-  Add a member of staff
-</button><br>
   
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
+
+        <a href="add-two"  class="govuk-button govuk-button--secondary">Add a member of staff </a>
+<br>
 
        <table class="govuk-table">
 
@@ -80,6 +79,7 @@
  
 
         
+
         
       </div>
     </div>
