--- a/app/views/prototypes/alpha/role.html
+++ b/app/views/prototypes/alpha/role.html
@@ -51,7 +51,7 @@
               Manager
             </label>
             <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
-              Principal, Vice principal, CEO
+              Senior or middle manager, principal, vice-principal, CEO
             </div>
 
           </div><br>
