--- a/app/views/index.html
+++ b/app/views/index.html
@@ -161,7 +161,7 @@
 
       <br><br>
 
-      <h2 class="govuk-heading-m">Starting our Alpha phase</h2>
+      <h2 class="govuk-heading-m">Starting our Alpha phase - 18 November 2020</h2>
 
 
       <p>Validating our changes - <a href="/prototypes/alpha/details">Start</a>
