--- a/app/views/prototypes/beta/start-staff.html
+++ b/app/views/prototypes/beta/start-staff.html
@@ -33,8 +33,7 @@
           <b>
         <span class="govuk-caption-xl">August 2020 to July 2021</span></h1>
 
-        <p class="govuk-body">Tell us about recruitment in your organisation and the staff you employ.</p>
-
+        
         
 
         <table class="govuk-table">
@@ -52,13 +51,17 @@
             <tr class="govuk-table__row">
               
               <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="many-vacancies">About your organisation</a>
+                <p class="govuk-body">Tell us about recruitment in your organisation and the staff you employ.</p>
+
                   </td>
               <td class="govuk-table__cell" scope="row"> </td>
               <td class="govuk-table__cell"></td>
             </tr>
             <tr class="govuk-table__row">
               
-              <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="mis">Your staff</a></td>
+              <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="mis">Your staff</a>
+                <p class="govuk-body">Enter the individual details of full-time, part-time and temporary staff.</p> <p> Create a list that includes managers, teachers, teaching support and administration staff.</p>
+              </td>
               <td class="govuk-table__cell" scope="row">       </td>
               <td class="govuk-table__cell"></td>
             </tr>
@@ -68,9 +71,6 @@
           </tbody>
           </table> 
       
-        
-
-        
       </div>
 
       
