--- a/app/views/prototypes/beta/list-staff-john-end.html
+++ b/app/views/prototypes/beta/list-staff-john-end.html
@@ -38,13 +38,18 @@
 
 
         <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-          Add a member of staff
-        </button>
+          <a href="add" class="govuk-link govuk-link--no-visited-state">
+            Add a member of staff
+          </a>
+        </button><br>
+
+        <h2 class="govuk-heading-m app-application-cards__heading">Incomplete staff members</h2>
+        <br>
 <table class="govuk-table">
 
       <thead class="govuk-table__head">
       <tr class="govuk-table__row">
-      <th class="govuk-table__row" scope="col"></th>
+      
       <th class="govuk-table__cell--numeric"></th>
     </tr>
 </thead>
@@ -60,9 +65,7 @@
       </a>
     </h3>
         </td>
-        <td class="govuk-table__cell"><strong class="govuk-tag app-tag--grey govuk-!-margin-bottom-1 govuk-!-font-size-14">
-          Incomplete
-        </strong></td>
+        
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
           Delete<span class="govuk-table__cell--numeric"></span>
         </a></td></tr>
@@ -77,9 +80,7 @@
       </a>
     </h3>
         </td>
-        <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
-          Incomplete
-        </strong></td>
+        
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
           Delete<span class="govuk-table__cell--numeric"></span>
         </a></td></tr>
@@ -95,9 +96,7 @@
         </a>
       </h3>
           </td>
-          <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
-            Incomplete
-          </strong></td>
+         
            <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
             Delete<span class="govuk-table__cell--numeric"></span>
           </a></td></tr>
@@ -113,9 +112,7 @@
         </a>
       </h3>
           </td>
-          <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
-            Incomplete
-          </strong></td>
+          
            <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
             Delete<span class="govuk-table__cell--numeric"></span>
           </a></td></tr>
@@ -131,9 +128,7 @@
         </a>
       </h3>
           </td>
-          <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
-            Incomplete
-          </strong></td>
+         
            <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
             Delete<span class="govuk-table__cell--numeric"></span>
           </a></td></tr>
@@ -149,9 +144,7 @@
         </a>
       </h3>
           </td>
-          <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
-            Incomplete
-          </strong></td>
+          
            <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
             Delete<span class="govuk-table__cell--numeric"></span>
           </a></td></tr>
@@ -167,9 +160,7 @@
         </a>
       </h3>
           </td>
-          <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
-            Incomplete
-          </strong></td>
+          
            <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
             Delete<span class="govuk-table__cell--numeric"></span>
           </a></td></tr>
@@ -179,6 +170,11 @@
 
 </tbody>
 </table> <br>
+
+<br>
+
+        <h2 class="govuk-heading-m app-application-cards__heading">Complete staff members</h2>
+        <br>
 
 <table class="govuk-table">
 
@@ -202,9 +198,7 @@
       </a>
     </h3>
         </td>
-        <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
-          Complete
-        </strong></td>
+        
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
           Delete<span class="govuk-table__cell--numeric"></span>
         </a></td></tr>
@@ -224,9 +218,7 @@
     </a>
   </h3>
       </td>
-      <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
-        Complete
-      </strong></td>
+      
        <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
         Delete<span class="govuk-table__cell--numeric"></span>
       </a></td></tr>
@@ -241,9 +233,7 @@
       </a>
     </h3>
         </td>
-        <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
-          Complete
-        </strong></td>
+        
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
           Delete<span class="govuk-table__cell--numeric"></span>
         </a></td></tr>
@@ -259,9 +249,7 @@
       </a>
     </h3>
         </td>
-        <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
-          Complete
-        </strong></td>
+        
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
           Delete<span class="govuk-table__cell--numeric"></span>
         </a></td></tr>
@@ -277,9 +265,7 @@
       </a>
     </h3>
         </td>
-        <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
-          Complete
-        </strong></td>
+        
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
           Delete<span class="govuk-table__cell--numeric"></span>
         </a></td></tr>
@@ -295,9 +281,7 @@
       </a>
     </h3>
         </td>
-        <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
-          Complete
-        </strong></td>
+       
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
           Delete<span class="govuk-table__cell--numeric"></span>
         </a></td></tr>
@@ -313,9 +297,7 @@
       </a>
     </h3>
         </td>
-        <td class="govuk-table__cell"><strong class="govuk-tag app-tag--turquoise govuk-!-margin-bottom-1 govuk-!-font-size-14">
-        Complete
-        </strong></td>
+        
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
           Delete<span class="govuk-table__cell--numeric"></span>
         </a></td></tr>
