--- a/app/views/prototypes/beta/list-staff-john-end.html
+++ b/app/views/prototypes/beta/list-staff-john-end.html
@@ -37,14 +37,11 @@
       <div class="govuk-grid-column-two-thirds">
 
 
-        <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-          <a href="add" class="govuk-link govuk-link--no-visited-state">
-            Add a member of staff
-          </a>
-        </button><br>
+        <a href="add-two"  class="govuk-button govuk-button--secondary">Add a member of staff </a>
+<br> <br>
 
         <h2 class="govuk-heading-m app-application-cards__heading">Incomplete staff members</h2>
-        <br>
+        
 <table class="govuk-table">
 
       <thead class="govuk-table__head">
@@ -174,7 +171,7 @@
 <br>
 
         <h2 class="govuk-heading-m app-application-cards__heading">Complete staff members</h2>
-        <br>
+        
 
 <table class="govuk-table">
 
@@ -197,6 +194,13 @@
         Armed Bharat
       </a>
     </h3>
+
+    <p>
+      
+    Male<br>
+    Mixed / Multiple ethnic group<br>
+    Teacher<BR>
+  Permanent</p>
         </td>
         
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
@@ -217,6 +221,10 @@
       Amy Cozan
     </a>
   </h3>
+  Female<br>
+  Mixed / Multiple ethnic group<br>
+    Teacher<BR>
+  Part-time</p>
       </td>
       
        <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
@@ -232,6 +240,10 @@
         Frederick Epstein
       </a>
     </h3>
+    Prefer  not to say<br>
+    Black / African / Caribbean / Black British<br>
+    Manager<br>
+  Permanent</p>
         </td>
         
          <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
