--- a/app/views/prototypes/beta/complete-john-five.html
+++ b/app/views/prototypes/beta/complete-john-five.html
@@ -56,11 +56,11 @@
                 Personal
               </a></h3>
               <p>
-                Date of Birth: 18 August 1992<br>
-              Sex: Male<br>
-              Ethnicity: White<br>
-              Disability: No<BR>
-            Nationality: English</p>
+                18 August 1992<br>
+              Male<br>
+             White<br>
+              No disability<BR>
+            English</p>
           </dt>
           
           <dd class="govuk-summary-list__actions">
